DatasetView is able to visualize the csv data. Add DatasetViewTest to test DatasetView. Update csv test file. OPen the last opened csv file.

--- a/src/BarChartRaceNet/Views/DatasetView.xaml
+++ b/src/BarChartRaceNet/Views/DatasetView.xaml
@@ -14,6 +14,6 @@
         <converters:ArrayToDataViewConverter x:Key="ArrayToDataViewConverter" />
     </UserControl.Resources>
     <Grid>
-        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding ItemsSource, Converter={StaticResource ArrayToDataViewConverter}}" />
+        <DataGrid ItemsSource="{Binding ItemsSource, Converter={StaticResource ArrayToDataViewConverter}}" />
     </Grid>
 </UserControl>
