Csv file can be loaded and visualize in a Chart and DataGrid. Interpolate the Values and Ranks to make smooth animation. Add ChartEditorView and its ViewModel to edit the chart and animation properties. Improving the Csv reader.

--- a/src/BarChartRaceNet/Views/MainWindow.xaml
+++ b/src/BarChartRaceNet/Views/MainWindow.xaml
@@ -55,7 +55,7 @@
             </ItemsControl>
         </ToolBar>
         <ScrollViewer Grid.Row="1">
-            <views:BarChartView Margin="8" DataContext="{Binding BarChartViewModel}" />
+            <views:ChartEditorView Margin="8" DataContext="{Binding ChartEditorViewModel}" />
         </ScrollViewer>
         <views:DatasetView Grid.Row="2" DataContext="{Binding DatasetViewModel}" />
     </Grid>
