Add Chart properties Editor and update layout. EventBinding will use DataContext as command parameter if command parameter is not set. Add BindingProxy to provide instance for controls inside templates. Adjust default property values.

--- a/src/BarChartRaceNet/Views/MainWindow.xaml
+++ b/src/BarChartRaceNet/Views/MainWindow.xaml
@@ -54,9 +54,10 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ToolBar>
-        <ScrollViewer Grid.Row="1">
-            <views:ChartEditorView Margin="8" DataContext="{Binding ChartEditorViewModel}" />
-        </ScrollViewer>
+        <views:ChartEditorView
+            Grid.Row="1"
+            Margin="8"
+            DataContext="{Binding ChartEditorViewModel}" />
         <views:DatasetView Grid.Row="2" DataContext="{Binding DatasetViewModel}" />
     </Grid>
 </mah:MetroWindow>
