--- a/src/BarChartRaceNet/Views/BarChartView.xaml
+++ b/src/BarChartRaceNet/Views/BarChartView.xaml
@@ -2,6 +2,7 @@
     x:Class="BarChartRaceNet.Views.BarChartView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:BarChartRaceNet.Common"
     xmlns:componentmodel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:extensions="clr-namespace:BarChartRaceNet.Extensions"
@@ -11,40 +12,44 @@
     d:DataContext="{d:DesignInstance viewmodels:BarChartViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    Background="{Binding Background}"
     mc:Ignorable="d">
     <UserControl.Resources>
-        <CollectionViewSource
-            x:Key="BarModels"
-            IsLiveSortingRequested="True"
-            Source="{Binding BarModels}">
-            <CollectionViewSource.SortDescriptions>
-                <componentmodel:SortDescription Direction="Descending" PropertyName="Index" />
-                <componentmodel:SortDescription PropertyName="Name" />
-            </CollectionViewSource.SortDescriptions>
-        </CollectionViewSource>
+        <ResourceDictionary>
+            <common:BindingProxy x:Key="BarChartViewModelProxy" DataContext="{Binding}" />
+            <CollectionViewSource
+                x:Key="BarModels"
+                IsLiveSortingRequested="True"
+                Source="{Binding BarModels}">
+                <CollectionViewSource.SortDescriptions>
+                    <componentmodel:SortDescription Direction="Descending" PropertyName="Index" />
+                    <componentmodel:SortDescription PropertyName="Name" />
+                </CollectionViewSource.SortDescriptions>
+            </CollectionViewSource>
+        </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
+    <Grid Margin="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <!--  Title  -->
-        <StackPanel Grid.Row="0" Margin="0,0,0,4">
+        <StackPanel Grid.Row="0" Margin="0,0,0,8">
             <TextBlock
-                FontSize="18"
+                FontSize="{Binding TitleFontSize}"
                 FontWeight="Bold"
                 Text="{Binding Title}" />
             <TextBlock
                 Margin="0,8,0,0"
-                FontSize="14"
+                FontSize="{Binding SubTitleFontSize}"
                 FontWeight="DemiBold"
                 Text="{Binding SubTitle}" />
         </StackPanel>
         <!--  Legend  -->
         <ItemsControl
             Grid.Row="1"
-            Margin="0,4,0,4"
+            Margin="0,0,0,8"
             ItemsSource="{Binding BarModels}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -58,19 +63,29 @@
                             Width="10"
                             Height="10"
                             VerticalAlignment="Center"
-                            Fill="{Binding Brush}" />
+                            Fill="{Binding Brush}">
+                            <Rectangle.Effect>
+                                <DropShadowEffect
+                                    BlurRadius="5"
+                                    Opacity="0.5"
+                                    ShadowDepth="1"
+                                    Color="Black" />
+                            </Rectangle.Effect>
+                        </Rectangle>
                         <TextBlock
-                            Margin="4,0,8,0"
+                            Margin="8,0,12,0"
                             VerticalAlignment="Center"
+                            FontSize="{Binding Source={StaticResource BarChartViewModelProxy}, Path=DataContext.BarNameFontSize}"
                             Text="{Binding Name}" />
                     </StackPanel>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
         <!--  Chart  -->
-        <Grid Grid.Row="2" Margin="0,4,200,0">
+        <Grid Grid.Row="2">
             <ItemsControl
                 Grid.Column="0"
+                Margin="0,0,200,0"
                 Grid.IsSharedSizeScope="True"
                 ItemsSource="{Binding Source={StaticResource BarModels}}">
                 <ItemsControl.ItemsPanel>
@@ -84,7 +99,10 @@
                             x:Name="BarGridContainer"
                             Height="{Binding ElementName=BarGrid, Path=ActualHeight, Mode=OneWay}"
                             extensions:ObserveSizeExtension.Height="{Binding BarContainerHeight, Mode=OneWayToSource}"
-                            extensions:ObserveSizeExtension.IsObserved="True">
+                            extensions:ObserveSizeExtension.IsObserved="True"
+                            Cursor="Hand"
+                            MouseLeftButtonDown="{extensions:EventBinding Command={Binding Source={StaticResource BarChartViewModelProxy},
+                                                                                           Path=DataContext.SelectBarCommand}}">
                             <Canvas>
                                 <Grid
                                     x:Name="BarGrid"
@@ -100,6 +118,7 @@
                                             Margin="8,0,8,0"
                                             HorizontalAlignment="Right"
                                             VerticalAlignment="Center"
+                                            FontSize="{Binding Source={StaticResource BarChartViewModelProxy}, Path=DataContext.BarNameFontSize}"
                                             Text="{Binding Name}" />
                                     </Grid>
                                     <!--  Bar Chart Data  -->
@@ -110,19 +129,24 @@
                                         </Grid.ColumnDefinitions>
                                         <Grid
                                             Grid.Column="0"
-                                            Height="{Binding ElementName=BarChartViewRoot, Path=DataContext.BarWidth}"
+                                            Height="{Binding ElementName=BarChartViewRoot, Path=DataContext.BarThickness}"
                                             Margin="0,4,0,4">
-                                            <Rectangle Fill="{Binding Brush}" Opacity="{Binding BarOpacity}" />
-                                            <TextBlock
-                                                Margin="4,0,0,0"
-                                                VerticalAlignment="Center"
-                                                Text="{Binding Index}" />
+                                            <Rectangle Fill="{Binding Brush}" Opacity="{Binding BarOpacity}">
+                                                <Rectangle.Effect>
+                                                    <DropShadowEffect
+                                                        BlurRadius="10"
+                                                        Opacity="0.5"
+                                                        ShadowDepth="5"
+                                                        Color="Black" />
+                                                </Rectangle.Effect>
+                                            </Rectangle>
                                         </Grid>
-                                        <Canvas Grid.Column="1" Height="{Binding ElementName=BarChartViewRoot, Path=DataContext.BarWidth}">
-                                            <Grid Height="{Binding ElementName=BarChartViewRoot, Path=DataContext.BarWidth}">
+                                        <Canvas Grid.Column="1" Height="{Binding ElementName=BarChartViewRoot, Path=DataContext.BarThickness}">
+                                            <Grid Height="{Binding ElementName=BarChartViewRoot, Path=DataContext.BarThickness}">
                                                 <TextBlock
-                                                    Margin="4,0,0,0"
+                                                    Margin="8,0,0,0"
                                                     VerticalAlignment="Center"
+                                                    FontSize="{Binding Source={StaticResource BarChartViewModelProxy}, Path=DataContext.BarNameFontSize}"
                                                     Text="{Binding ValueText}" />
                                             </Grid>
                                         </Canvas>
