--- a/src/BarChartRaceNet/Views/ChartEditorView.xaml
+++ b/src/BarChartRaceNet/Views/ChartEditorView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:BarChartRaceNet.ViewModels"
     xmlns:views="clr-namespace:BarChartRaceNet.Views"
@@ -10,13 +11,218 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <Thickness x:Key="ControlMargin">0 4 0 0</Thickness>
+            <Style TargetType="TextBlock">
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <views:BarChartView Grid.Row="0" DataContext="{Binding BarChartViewModel}" />
-        <Grid Grid.Row="1" DataContext="{Binding BarAnimationModel}">
+        <!--  Bar Chart View  -->
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <ScrollViewer
+                Grid.Column="0"
+                Background="Gainsboro"
+                HorizontalScrollBarVisibility="Auto"
+                VerticalScrollBarVisibility="Auto">
+                <Grid
+                    Width="{Binding Width}"
+                    Height="{Binding Height}"
+                    Margin="16"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    DataContext="{Binding BarChartViewModel}">
+                    <Border Background="White">
+                        <Border.Effect>
+                            <DropShadowEffect
+                                BlurRadius="10"
+                                Opacity="0.5"
+                                Color="Black" />
+                        </Border.Effect>
+                    </Border>
+                    <views:BarChartView />
+                </Grid>
+            </ScrollViewer>
+            <ScrollViewer Grid.Column="1" MinWidth="400">
+                <StackPanel>
+                    <GroupBox
+                        Margin="4,2"
+                        DataContext="{Binding BarChartViewModel}"
+                        Header="Appearance">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="16" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <!--  Width  -->
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Width" />
+                            <mah:NumericUpDown
+                                Grid.Row="0"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type Chart width"
+                                Maximum="7680"
+                                Minimum="800"
+                                Value="{Binding Width, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <!--  Height  -->
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Height" />
+                            <mah:NumericUpDown
+                                Grid.Row="1"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type Chart height"
+                                Maximum="4320"
+                                Minimum="600"
+                                Value="{Binding Height, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <!--  Bar Space  -->
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Bar space" />
+                            <mah:NumericUpDown
+                                Grid.Row="2"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type bar space"
+                                Maximum="100"
+                                Minimum="1"
+                                Value="{Binding BarSpace, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <!--  Bar Thickness  -->
+                            <TextBlock
+                                Grid.Row="3"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Bar thickness" />
+                            <mah:NumericUpDown
+                                Grid.Row="3"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type bar space"
+                                Maximum="500"
+                                Minimum="10"
+                                Value="{Binding BarThickness, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <!--  Title Font Size  -->
+                            <TextBlock
+                                Grid.Row="4"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Title font size" />
+                            <mah:NumericUpDown
+                                Grid.Row="4"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type Chart height"
+                                Maximum="100"
+                                Minimum="6"
+                                Value="{Binding TitleFontSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <!--  Sub Title Font Size  -->
+                            <TextBlock
+                                Grid.Row="5"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Subtitle font size" />
+                            <mah:NumericUpDown
+                                Grid.Row="5"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type Chart height"
+                                Maximum="100"
+                                Minimum="6"
+                                Value="{Binding SubTitleFontSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <!--  Bar Name Font Size  -->
+                            <TextBlock
+                                Grid.Row="6"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Bar name font size" />
+                            <mah:NumericUpDown
+                                Grid.Row="6"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type Chart height"
+                                Maximum="100"
+                                Minimum="6"
+                                Value="{Binding BarNameFontSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox
+                        Margin="4,2"
+                        DataContext="{Binding BarChartViewModel}"
+                        Header="Chart Data">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="16" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <!--  Title  -->
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Title" />
+                            <TextBox
+                                Grid.Row="0"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
+                            <!--  Subtitle  -->
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Subtitle" />
+                            <TextBox
+                                Grid.Row="1"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="{Binding SubTitle, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </GroupBox>
+                </StackPanel>
+            </ScrollViewer>
+        </Grid>
+        <!--  Animation Slider  -->
+        <Grid
+            Grid.Row="1"
+            Margin="{StaticResource ControlMargin}"
+            DataContext="{Binding BarAnimationModel}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
